--- a/packages/weavedb/tsconfig.json
+++ b/packages/weavedb/tsconfig.json
@@ -1,1 +1,9 @@
-{ "extends": "@tsconfig/node16" }
+{
+  "extends": "@tsconfig/node16",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "weavedb-sdk": ["types/weavede-sdk.d.ts"]
+    }
+  }
+}
