--- a/packages/weavedb/package.json
+++ b/packages/weavedb/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "arweave": "^1.11.6",
+    "ethers": "^5.7.2",
+    "secp256k1": "^4.0.3",
     "warp-contracts": "1.1.14"
   },
   "devDependencies": {
