--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -13,6 +13,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "ethers": "^5.7.2",
     "weavedb-sdk": "^0.5.8"
   }
