--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,5 +1,9 @@
 {
-  "name": "sdk",
+  "name": "@ammsdk/sdk",
+  "private": true,
+  "version": "0.0.0",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "packageManager": "yarn@3.2.4",
   "scripts": {
     "build": "rollup --configPlugin typescript --config rollup.config.ts",
@@ -7,6 +11,9 @@
     "lint-fix": "eslint --cache --fix src/ && prettier --write src/"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-json": "^5.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^9.0.2",
     "rollup": "^3.2.3",
     "rollup-plugin-dts": "^5.0.0",
