--- a/packages/interface/package.json
+++ b/packages/interface/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "boring-avatars": "^1.7.0",
     "clsx": "^1.2.1",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
@@ -28,6 +29,7 @@
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.38.0",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.2"
+    "tailwindcss": "^3.2.2",
+    "weavedb-sdk": "^0.5.8"
   }
 }
