--- a/packages/interface/package.json
+++ b/packages/interface/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "boring-avatars": "^1.7.0",
+    "buffer": "^6.0.3",
     "clsx": "^1.2.1",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
@@ -23,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
