--- a/packages/interface/package.json
+++ b/packages/interface/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "axios": "^1.1.3",
     "boring-avatars": "^1.7.0",
     "buffer": "^6.0.3",
     "clsx": "^1.2.1",
