--- a/packages/interface/package.json
+++ b/packages/interface/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.0.2",
     "ethers": "^5.7.2",
     "next": "13.0.2",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.6",
